--- a/Respoke/app/build.gradle
+++ b/Respoke/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile project(':respokeSDK')
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:20.0.0'
 }
