--- a/Respoke/app/src/main/AndroidManifest.xml
+++ b/Respoke/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
     package="com.digium.respoke" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"></uses-feature>
 
     <application
         android:allowBackup="true"
