New call screen layout that matcher iOS design.

--- a/Respoke/app/src/main/AndroidManifest.xml
+++ b/Respoke/app/src/main/AndroidManifest.xml
@@ -40,9 +40,8 @@
         </activity>
         <activity
             android:name=".CallActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_call"
-            android:theme="@style/FullscreenTheme" >
+            android:theme="@android:style/android:Theme.Holo.Light.NoActionBar" >
         </activity>
     </application>
 
