--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Respoke/respokeSDK"]
 	path = Respoke/respokeSDK
-	url = https://rcrabtree@stash.digium.com/stash/scm/scl/respoke-sdk-android.git
+	url = https://stash.digium.com/stash/scm/scl/respoke-sdk-android.git
