--- a/Respoke/app/build.gradle
+++ b/Respoke/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "com.digium.respoke"
         minSdkVersion 17
-        targetSdkVersion 20
+        targetSdkVersion 22
         versionCode 3
         versionName "1.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,7 +26,7 @@ android {
 dependencies {
     compile project(':respokeSDK')
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.android.support:support-v4:22.+'
 
     // Testing dependencies
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
