--- a/Respoke/settings.gradle
+++ b/Respoke/settings.gradle
@@ -1,3 +1,1 @@
-include ':app', ':respokeSDK', ':respokeSDKTest'
-project(':respokeSDK').projectDir = new File('respokeSDK/respokeSDK')
-project(':respokeSDKTest').projectDir = new File('respokeSDK/respokeSDKTest')
+include ':app'
