--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue "string", "TEST_BOT_SUFFIX", System.getenv("USER")
+        }
+        debug{
+            resValue "string", "TEST_BOT_SUFFIX", System.getenv("USER")
         }
     }
     packagingOptions {
